--- a/src/Views/Home/styles.css
+++ b/src/Views/Home/styles.css
@@ -1,52 +1,49 @@
-.home {
+.home .banner h1 {
+  text-align: center;
+}
+
+.home .banner .img-container {
+  height: 50vh;
+  overflow: hidden;
+  background-image: url("../../Assets/imgs/banner.jpg");
+  background-attachment: fixed;
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
   position: relative;
 }
 
-.home .home-loader {
+.home .banner .img-container:hover > .img-container-logo {
+  -webkit-transform: translate(-50%, -50%) scale(1.2);
+          transform: translate(-50%, -50%) scale(1.2);
+}
+
+.home .banner .img-container .img-container-logo {
+  background: url("../../Assets/imgs/sw.png");
+  position: absolute;
+  border-radius: 10px;
+  height: 100px;
+  z-index: 100;
+  width: 200px;
+  background-position: center;
+  background-size: cover;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-transition: -webkit-transform 2s ease;
+  transition: -webkit-transform 2s ease;
+  transition: transform 2s ease;
+  transition: transform 2s ease, -webkit-transform 2s ease;
+}
+
+.home .banner .img-container::before {
+  content: '';
   position: absolute;
   top: 0;
   right: 0;
-  left: 0;
   bottom: 0;
-  place-items: center;
-}
-
-.home .home-loader .loader {
-  width: 90px;
-  height: 90px;
-  background-color: #ccc;
-  border-radius: 50%;
-  -webkit-animation: morp 2s infinite;
-          animation: morp 2s infinite;
-}
-
-@-webkit-keyframes morp {
-  0%, 100% {
-    border-radius: 50%;
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-    background-color: #513c0b;
-  }
-  50% {
-    border-radius: 10%;
-    -webkit-transform: rotate(180deg);
-            transform: rotate(180deg);
-    background-color: purple;
-  }
-}
-
-@keyframes morp {
-  0%, 100% {
-    border-radius: 50%;
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-    background-color: #513c0b;
-  }
-  50% {
-    border-radius: 10%;
-    -webkit-transform: rotate(180deg);
-            transform: rotate(180deg);
-    background-color: purple;
-  }
+  left: 0;
+  background: linear-gradient(226deg, rgba(126, 83, 162, 0.299), rgba(152, 225, 25, 0.288));
 }
 /*# sourceMappingURL=styles.css.map */
