--- a/src/Router/Components/NavBar/styles.css
+++ b/src/Router/Components/NavBar/styles.css
@@ -6,57 +6,39 @@
 nav {
   background: linear-gradient(354deg, #04619F, #000);
   padding: 20px 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
-
 nav .logo, nav .logo img {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   height: 50px;
   gap: 20px;
 }
-
 nav .logo h1 {
   color: #fff;
   line-height: 50px;
 }
-
 nav .logo img {
   width: 50px;
 }
-
 nav ul {
   list-style-type: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 nav ul li a {
   padding: 10px 20px;
   text-decoration: none;
   color: #fff;
-  -webkit-transition: all .9s ease;
-  transition: all .9s ease;
+  transition: all 0.9s ease;
   position: relative;
 }
-
 nav ul li a::after {
-  content: '';
+  content: "";
   width: 90%;
   height: 2px;
   background-color: #fff;
   position: absolute;
   top: 70%;
   left: 10px;
-}
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
